# Zorac

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  SERVER_SETUP.md  mkdocs.yml  pyproject.toml  run_zorac.py  zorac.py  zorac.spec
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: CNAME  CONFIGURATION.md  DEVELOPMENT.md  INSTALLATION.md  SERVER_SETUP.md  TEST_TRAINING.md  USAGE.md  index.md
docs/site/: index.md
docs/site/concepts/: context-management.md  how-llms-work.md  inference-servers.md  prompt-engineering.md  quantization.md
docs/site/decisions/: why-awq.md  why-textual.md
docs/site/guides/: building-the-tui.md  multi-gpu-training.md  server-setup.md
docs/site/walkthroughs/: quantizing-the-model.md  streaming-explained.md  what-happens-on-enter.md
docs/stylesheets/: extra.css
quant/: CLAUDE.md
quant-lab/: CLAUDE.md  README.md  pyproject.toml  quantize_mistral.py
requirements/: help_feature.md
tests/: test_commands.py  test_zorac.py
zorac/: __init__.py  __main__.py  commands.py  config.py  console.py  handlers.py  history.py  llm.py  main.py  markdown_custom.py  session.py  streaming.py  utils.py  widgets.py
