[project]
name = "quant-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.11.14"
dependencies = [
    "accelerate>=1.12.0",
    "datasets>=3.0.0",
    "llmcompressor>=0.5.0",
    "torch>=2.10.0",
    "transformers>=4.46.0,<4.50.0",
]

[dependency-groups]
dev = [
    "types-transformers>=0.1.0",
]
